--- a/qr-code-component-main/styles.css
+++ b/qr-code-component-main/styles.css
@@ -39,3 +39,11 @@ main {
   font-weight: 400;
   padding: 15px;
 }
+
+.attribution {
+        font-size: 11px;
+        text-align: center;
+}
+.attribution a {
+        color: hsl(228, 45%, 44%);
+}
